b_eval computes covariance matrix of x.

--- a/Example_B_LEAST_1.ipynb
+++ b/Example_B_LEAST_1.ipynb
@@ -101,13 +101,17 @@
       "Measurement data:\n",
       "[[5.99230480e+00 1.63773208e-01 2.58000000e-01 5.16000000e-03]\n",
       " [1.44094449e+01 3.55953958e-01 6.00000000e-01 1.20000000e-02]\n",
-      " [4.39432700e+01 1.16288816e+00 1.80000000e+00 3.60000000e-02]]\n"
+      " [4.39432700e+01 1.16288816e+00 1.80000000e+00 3.60000000e-02]]\n",
+      "Covariance cov(x)\n",
+      "[[0.02682166 0.01159685 0.01476538]\n",
+      " [0.01159685 0.12670322 0.13730902]\n",
+      " [0.01476538 0.13730902 1.35230887]]\n"
      ]
     }
    ],
    "source": [
-    "x = b_eval(meas_data, b, b_cov, b_linear_func)\n",
-    "b_disp_meas_results(x, meas_data)"
+    "x, x_cov = b_eval(meas_data, b, b_cov, b_linear_func)\n",
+    "b_disp_meas_results(x, x_cov, meas_data)"
    ]
   }
  ],
