--- a/Example_B_LEAST_2.ipynb
+++ b/Example_B_LEAST_2.ipynb
@@ -112,13 +112,16 @@
      "text": [
       "Measurement data:\n",
       "[[1.70035046e+00 2.02415466e-03 7.00000000e+04 4.00000000e+01]\n",
-      " [8.98586058e+00 9.97202613e-03 3.70000000e+05 2.00000000e+02]]\n"
+      " [8.98586058e+00 9.97202613e-03 3.70000000e+05 2.00000000e+02]]\n",
+      "Covariance cov(x)\n",
+      "[[4.09720210e-06 1.32279505e-05]\n",
+      " [1.32279505e-05 9.94413051e-05]]\n"
      ]
     }
    ],
    "source": [
-    "x1 = b_eval(meas_data, b1, b1_cov, b_linear_func)\n",
-    "b_disp_meas_results(x1, meas_data)"
+    "x1, x1_cov = b_eval(meas_data, b1, b1_cov, b_linear_func)\n",
+    "b_disp_meas_results(x1, x1_cov, meas_data)"
    ]
   },
   {
@@ -182,13 +185,16 @@
      "text": [
       "Measurement data:\n",
       "[[1.70594170e+00 3.29026182e-03 7.00000000e+04 4.00000000e+01]\n",
-      " [8.97232176e+00 1.17639445e-02 3.70000000e+05 2.00000000e+02]]\n"
+      " [8.97232176e+00 1.17639445e-02 3.70000000e+05 2.00000000e+02]]\n",
+      "Covariance cov(x)\n",
+      "[[ 1.08258228e-05 -3.05598589e-06]\n",
+      " [-3.05598589e-06  1.38390389e-04]]\n"
      ]
     }
    ],
    "source": [
-    "x2 = b_eval(meas_data, b2, b2_cov, b_second_order_poly)\n",
-    "b_disp_meas_results(x2, meas_data)"
+    "x2, x2_cov = b_eval(meas_data, b2, b2_cov, b_second_order_poly)\n",
+    "b_disp_meas_results(x2, x2_cov, meas_data)"
    ]
   }
  ],
