--- a/Example_B_LEAST_3.ipynb
+++ b/Example_B_LEAST_3.ipynb
@@ -120,8 +120,8 @@
     }
    ],
    "source": [
-    "x1 = b_eval(meas_data, b1, b1_cov, b_linear_func)\n",
-    "b_disp_meas_results(x1, meas_data)"
+    "x1, x1_cov = b_eval(meas_data, b1, b1_cov, b_linear_func)\n",
+    "b_disp_meas_results(x1, x1_cov,meas_data)"
    ]
   },
   {
@@ -189,8 +189,8 @@
     }
    ],
    "source": [
-    "x2 = b_eval(meas_data, b2, b2_cov, b_power_func)\n",
-    "b_disp_meas_results(x2, meas_data)"
+    "x2, x2_cov = b_eval(meas_data, b2, b2_cov, b_power_func)\n",
+    "b_disp_meas_results(x2, x2_cov, meas_data)"
    ]
   },
   {
@@ -258,8 +258,8 @@
     }
    ],
    "source": [
-    "x3 = b_eval(meas_data, b3, b3_cov, b_exp_func)\n",
-    "b_disp_meas_results(x3, meas_data)"
+    "x3, x3_cov = b_eval(meas_data, b3, b3_cov, b_exp_func)\n",
+    "b_disp_meas_results(x3, x3_cov, meas_data)"
    ]
   }
  ],
