m_b_least folder added.

--- a/metas_b_least/Example_B_LEAST_2.ipynb
+++ b/metas_b_least/Example_B_LEAST_2.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Example B LEAST 2\n",
     "\n",
-    "Michael Wollensack METAS - 25.10.2024"
+    "Michael Wollensack METAS - 28.10.2024"
    ]
   },
   {
@@ -47,8 +47,8 @@
     }
    ],
    "source": [
-    "cal_data = b_read_cal_data('data/b_least_2_data_cal.txt')\n",
-    "meas_data = b_read_meas_data('data/b_least_2_data_meas.txt')\n",
+    "cal_data = b_read_cal_data(os.path.join(data_dir, 'b_least_2_data_cal.txt'))\n",
+    "meas_data = b_read_meas_data(os.path.join(data_dir, 'b_least_2_data_meas.txt'))\n",
     "b_disp_cal_data(cal_data)"
    ]
   },
