--- a/metas_b_least/Example_B_LEAST_2.ipynb
+++ b/metas_b_least/Example_B_LEAST_2.ipynb
@@ -125,6 +125,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Plot calibration data, measurement data and fit function"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
@@ -215,6 +222,13 @@
    "source": [
     "x2, x2_cov = b_eval(meas_data, b2, b2_cov, b_second_order_poly)\n",
     "b_disp_meas_results(x2, x2_cov, meas_data)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Plot calibration data, measurement data and fit function"
    ]
   },
   {
