--- a/metas_b_least/Example_B_LEAST_3.ipynb
+++ b/metas_b_least/Example_B_LEAST_3.ipynb
@@ -125,6 +125,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Plot calibration data, measurement data and fit function"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
@@ -214,6 +221,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Plot calibration data, measurement data and fit function"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
@@ -300,6 +314,13 @@
    "source": [
     "x3, x3_cov = b_eval(meas_data, b3, b3_cov, b_exp_func)\n",
     "b_disp_meas_results(x3, x3_cov, meas_data)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Plot calibration data, measurement data and fit function"
    ]
   },
   {
