--- a/metas_b_least/Example_B_LEAST_1.ipynb
+++ b/metas_b_least/Example_B_LEAST_1.ipynb
@@ -115,6 +115,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Plot calibration data, measurement data and fit function"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
