Optional parameter seed added to b_sample_*_mc functions.

--- a/metas_b_least/Example_B_LEAST_MC_1.ipynb
+++ b/metas_b_least/Example_B_LEAST_MC_1.ipynb
@@ -35,9 +35,9 @@
      "output_type": "stream",
      "text": [
       "Calibration data:\n",
-      "[[4.49996386e+00 4.55175253e-02 1.96918129e-01 3.95876162e-03]\n",
-      " [1.87484840e+01 1.87866055e-01 7.87297625e-01 1.56226212e-02]\n",
-      " [5.00061112e+01 5.01058388e-01 2.02246976e+00 4.01366360e-02]]\n"
+      "[[4.50043977e+00 4.49453630e-02 1.96937157e-01 3.94268336e-03]\n",
+      " [1.87472618e+01 1.86740453e-01 7.87650636e-01 1.57900067e-02]\n",
+      " [4.99992112e+01 5.02239036e-01 2.02314094e+00 4.06536301e-02]]\n"
      ]
     }
    ],
@@ -45,7 +45,7 @@
     "cal_data = b_read_cal_data(os.path.join(data_dir, 'b_least_1_data_cal.txt'))\n",
     "meas_data = b_read_meas_data(os.path.join(data_dir, 'b_least_1_data_meas.txt'))\n",
     "nsamples = 10000\n",
-    "cal_samples = b_sample_cal_data_mc(cal_data, nsamples)\n",
+    "cal_samples = b_sample_cal_data_mc(cal_data, nsamples, seed=1)\n",
     "meas_samples = b_sample_meas_data_mc(meas_data, nsamples) \n",
     "b_disp_cal_data_mc(cal_samples)"
    ]
@@ -67,12 +67,12 @@
      "output_type": "stream",
      "text": [
       "Coefficients b\n",
-      "[-0.36139079 24.62514959]\n",
+      "[-0.35797936 24.60929334]\n",
       "Uncertainties u(b)\n",
-      "[0.15855795 0.47974287]\n",
+      "[0.15627384 0.48140357]\n",
       "Covariance cov(b)\n",
-      "[[ 0.02514062 -0.05717815]\n",
-      " [-0.05717815  0.23015322]]\n",
+      "[[ 0.02442151 -0.05662549]\n",
+      " [-0.05662549  0.23174939]]\n",
       "Residual\n",
       "nan\n",
       "Maximum absolute value of weighted deviations\n",
@@ -102,13 +102,13 @@
      "output_type": "stream",
      "text": [
       "Measurement data:\n",
-      "[[5.99114044e+00 1.65138375e-01 2.57971137e-01 5.13485410e-03]\n",
-      " [1.44129315e+01 3.56568461e-01 5.99966599e-01 1.19497172e-02]\n",
-      " [4.39767670e+01 1.16010097e+00 1.80053392e+00 3.62651748e-02]]\n",
+      "[[5.98929308e+00 1.62858559e-01 2.57922694e-01 5.14825904e-03]\n",
+      " [1.44088677e+01 3.54300018e-01 6.00052297e-01 1.18973756e-02]\n",
+      " [4.39445255e+01 1.16189337e+00 1.80023298e+00 3.57852386e-02]]\n",
       "Covariance cov(x)\n",
-      "[[0.02727068 0.0116997  0.01507803]\n",
-      " [0.0116997  0.12714107 0.13655595]\n",
-      " [0.01507803 0.13655595 1.34583426]]\n"
+      "[[0.02652291 0.01130903 0.01325308]\n",
+      " [0.01130903 0.1255285  0.1390257 ]\n",
+      " [0.01325308 0.1390257  1.34999619]]\n"
      ]
     }
    ],
