--- a/metas_b_least/Example_B_LEAST_MC_2.ipynb
+++ b/metas_b_least/Example_B_LEAST_MC_2.ipynb
@@ -35,14 +35,14 @@
      "output_type": "stream",
      "text": [
       "Calibration data:\n",
-      "[[1.48754296e-03 9.04221330e-04 5.98316975e+01 3.44464684e+01]\n",
-      " [1.88800539e-01 4.52197695e-04 7.78521143e+03 1.34663413e+02]\n",
-      " [1.98997164e+00 4.02446500e-03 8.17003609e+04 3.67453405e+01]\n",
-      " [3.79579816e+00 3.86286467e-02 1.56194248e+05 2.24578251e+02]\n",
-      " [5.67699873e+00 1.25532721e-02 2.33299916e+05 1.34844002e+02]\n",
-      " [7.11789391e+00 1.23941185e-02 2.92996902e+05 2.44429251e+02]\n",
-      " [9.20965375e+00 1.99359607e-02 3.80599914e+05 1.25321846e+02]\n",
-      " [1.08997033e+01 2.50850935e-02 4.49703774e+05 3.24994211e+02]]\n"
+      "[[1.48272752e-03 9.00375515e-04 6.06278554e+01 3.52662843e+01]\n",
+      " [1.88795964e-01 4.51583669e-04 7.78757577e+03 1.35050298e+02]\n",
+      " [1.98998087e+00 3.99010360e-03 8.16997970e+04 3.66606632e+01]\n",
+      " [3.79566794e+00 3.93571597e-02 1.56198160e+05 2.24094202e+02]\n",
+      " [5.67686102e+00 1.25151471e-02 2.33300563e+05 1.37492117e+02]\n",
+      " [7.11797217e+00 1.25605066e-02 2.92999793e+05 2.45121175e+02]\n",
+      " [9.20993535e+00 1.97872924e-02 3.80601222e+05 1.24247827e+02]\n",
+      " [1.09002849e+01 2.45360035e-02 4.49698584e+05 3.18677535e+02]]\n"
      ]
     }
    ],
@@ -50,7 +50,7 @@
     "cal_data = b_read_cal_data(os.path.join(data_dir, 'b_least_2_data_cal.txt'))\n",
     "meas_data = b_read_meas_data(os.path.join(data_dir, 'b_least_2_data_meas.txt'))\n",
     "nsamples = 10000\n",
-    "cal_samples = b_sample_cal_data_mc(cal_data, nsamples)\n",
+    "cal_samples = b_sample_cal_data_mc(cal_data, nsamples, seed=2)\n",
     "meas_samples = b_sample_meas_data_mc(meas_data, nsamples) \n",
     "b_disp_cal_data_mc(cal_samples)"
    ]
@@ -79,12 +79,12 @@
      "output_type": "stream",
      "text": [
       "Coefficients b\n",
-      "[3.87314601e-04 2.42844293e-05]\n",
+      "[3.72127836e-04 2.42844442e-05]\n",
       "Uncertainties u(b)\n",
-      "[1.13303537e-03 2.40767827e-08]\n",
+      "[1.15443587e-03 2.40821026e-08]\n",
       "Covariance cov(b)\n",
-      "[[ 1.28376916e-06 -7.03625806e-12]\n",
-      " [-7.03625806e-12  5.79691464e-16]]\n",
+      "[[ 1.33272217e-06 -7.41499134e-12]\n",
+      " [-7.41499134e-12  5.79947667e-16]]\n",
       "Residual\n",
       "nan\n",
       "Maximum absolute value of weighted deviations\n",
@@ -114,11 +114,11 @@
      "output_type": "stream",
      "text": [
       "Measurement data:\n",
-      "[[1.70030465e+00 2.01914258e-03 7.00003002e+04 4.00368574e+01]\n",
-      " [8.98559166e+00 1.00445794e-02 3.69998576e+05 2.01394571e+02]]\n",
+      "[[1.70027440e+00 2.02201307e-03 6.99996371e+04 3.99991628e+01]\n",
+      " [8.98565830e+00 9.95987976e-03 3.70001722e+05 2.00553206e+02]]\n",
       "Covariance cov(x)\n",
-      "[[4.07693675e-06 1.33301367e-05]\n",
-      " [1.33301367e-05 1.00893574e-04]]\n"
+      "[[4.08853686e-06 1.30383611e-05]\n",
+      " [1.30383611e-05 9.91992047e-05]]\n"
      ]
     }
    ],
@@ -151,13 +151,13 @@
      "output_type": "stream",
      "text": [
       "Coefficients b\n",
-      "[-1.38129864e-04  2.44013160e-05 -4.11108464e-13]\n",
+      "[-1.65164855e-04  2.44006783e-05 -4.07405721e-13]\n",
       "Uncertainties u(b)\n",
-      "[1.16204621e-03 5.88275758e-08 1.87518535e-13]\n",
+      "[1.18405848e-03 5.84896428e-08 1.87059555e-13]\n",
       "Covariance cov(b)\n",
-      "[[ 1.35035139e-06 -2.02420746e-11  4.60158957e-17]\n",
-      " [-2.02420746e-11  3.46068368e-15 -1.00657459e-20]\n",
-      " [ 4.60158957e-17 -1.00657459e-20  3.51632008e-26]]\n",
+      "[[ 1.40199449e-06 -2.07902456e-11  4.67958919e-17]\n",
+      " [-2.07902456e-11  3.42103832e-15 -9.97104722e-21]\n",
+      " [ 4.67958919e-17 -9.97104722e-21  3.49912770e-26]]\n",
       "Residual\n",
       "nan\n",
       "Maximum absolute value of weighted deviations\n",
@@ -187,11 +187,11 @@
      "output_type": "stream",
      "text": [
       "Measurement data:\n",
-      "[[1.70594686e+00 3.29195045e-03 7.00003002e+04 4.00368574e+01]\n",
-      " [8.97203388e+00 1.17226760e-02 3.69998576e+05 2.01394571e+02]]\n",
+      "[[1.70587718e+00 3.26369637e-03 6.99996371e+04 3.99991628e+01]\n",
+      " [8.97235357e+00 1.16955211e-02 3.70001722e+05 2.00553206e+02]]\n",
       "Covariance cov(x)\n",
-      "[[ 1.08369378e-05 -2.49501345e-06]\n",
-      " [-2.49501345e-06  1.37421133e-04]]\n"
+      "[[ 1.06517140e-05 -2.76757841e-06]\n",
+      " [-2.76757841e-06  1.36785214e-04]]\n"
      ]
     }
    ],
