--- a/metas_b_least/Example_B_LEAST_MC_3.ipynb
+++ b/metas_b_least/Example_B_LEAST_MC_3.ipynb
@@ -35,18 +35,18 @@
      "output_type": "stream",
      "text": [
       "Calibration data:\n",
-      "[[1.00058016e+00 1.33001686e-03 9.63853136e+02 1.41139367e+01]\n",
-      " [1.00099755e+00 1.09827399e-03 9.66357880e+02 1.23963686e+01]\n",
-      " [1.99945051e+00 3.20696536e-03 1.91259763e+03 1.68036587e+01]\n",
-      " [3.00169592e+00 3.38321434e-03 2.84701859e+03 1.16287238e+01]\n",
-      " [3.99823724e+00 5.77817966e-03 3.75476910e+03 1.09530262e+01]\n",
-      " [4.00438164e+00 5.80452803e-03 3.76460050e+03 1.22140773e+01]\n",
-      " [4.99820599e+00 5.83886399e-03 4.64707204e+03 1.43565220e+01]\n",
-      " [5.99620331e+00 7.74206166e-03 5.53014596e+03 1.20249803e+01]\n",
-      " [7.99733580e+00 8.37890237e-03 7.24593974e+03 1.18334136e+01]\n",
-      " [7.99955881e+00 9.95458156e-03 7.24036664e+03 1.06555310e+01]\n",
-      " [9.99798499e+00 1.20760936e-02 8.88469360e+03 1.00789679e+01]\n",
-      " [1.00060005e+01 1.03895148e-02 8.90268500e+03 1.41230202e+01]]\n"
+      "[[1.00056294e+00 1.33448710e-03 9.63821579e+02 1.39212913e+01]\n",
+      " [1.00099631e+00 1.09255953e-03 9.66356763e+02 1.25764512e+01]\n",
+      " [1.99951948e+00 3.19299931e-03 1.91256101e+03 1.67330044e+01]\n",
+      " [3.00180797e+00 3.38774003e-03 2.84681958e+03 1.14995845e+01]\n",
+      " [3.99822271e+00 5.77796585e-03 3.75489754e+03 1.07906055e+01]\n",
+      " [4.00421316e+00 5.77155689e-03 3.76489562e+03 1.19376182e+01]\n",
+      " [4.99809904e+00 5.76264190e-03 4.64714714e+03 1.43965117e+01]\n",
+      " [5.99593067e+00 7.70939988e-03 5.53017447e+03 1.19605780e+01]\n",
+      " [7.99736685e+00 8.46657736e-03 7.24584988e+03 1.18343827e+01]\n",
+      " [7.99941550e+00 1.00180264e-02 7.24057103e+03 1.07601998e+01]\n",
+      " [9.99813774e+00 1.20403974e-02 8.88457873e+03 9.97204052e+00]\n",
+      " [1.00059648e+01 1.05731090e-02 8.90258086e+03 1.40877890e+01]]\n"
      ]
     }
    ],
@@ -54,7 +54,7 @@
     "cal_data = b_read_cal_data(os.path.join(data_dir, 'b_least_3_data_cal.txt'))\n",
     "meas_data = b_read_meas_data(os.path.join(data_dir, 'b_least_3_data_meas.txt'))\n",
     "nsamples = 10000\n",
-    "cal_samples = b_sample_cal_data_mc(cal_data, nsamples)\n",
+    "cal_samples = b_sample_cal_data_mc(cal_data, nsamples, seed=3)\n",
     "meas_samples = b_sample_meas_data_mc(meas_data, nsamples) \n",
     "b_disp_cal_data_mc(cal_samples)"
    ]
@@ -83,12 +83,12 @@
      "output_type": "stream",
      "text": [
       "Coefficients b\n",
-      "[-0.19150431  0.00113375]\n",
+      "[-0.19277142  0.0011339 ]\n",
       "Uncertainties u(b)\n",
-      "[9.06758653e-03 1.74280337e-06]\n",
+      "[8.97602529e-03 1.71361280e-06]\n",
       "Covariance cov(b)\n",
-      "[[ 8.22211255e-05 -1.36411770e-08]\n",
-      " [-1.36411770e-08  3.03736358e-12]]\n",
+      "[[ 8.05690300e-05 -1.32309035e-08]\n",
+      " [-1.32309035e-08  2.93646884e-12]]\n",
       "Residual\n",
       "nan\n",
       "Maximum absolute value of weighted deviations\n",
@@ -118,7 +118,7 @@
      "output_type": "stream",
      "text": [
       "Measurement data:\n",
-      "[[5.42111417e+00 1.32907017e-02 4.95049755e+03 1.09781154e+01]]\n"
+      "[[5.42075758e+00 1.31435976e-02 4.95063949e+03 1.08243660e+01]]\n"
      ]
     }
    ],
@@ -151,13 +151,13 @@
      "output_type": "stream",
      "text": [
       "Coefficients b\n",
-      "[0.12096683 0.00051288 0.08494935]\n",
+      "[0.121425   0.00051229 0.08507589]\n",
       "Uncertainties u(b)\n",
-      "[1.81882030e-02 2.43029527e-05 5.09013967e-03]\n",
+      "[1.82722251e-02 2.43420007e-05 5.10307697e-03]\n",
       "Covariance cov(b)\n",
-      "[[ 3.30810729e-04 -4.01964149e-07  8.31781129e-05]\n",
-      " [-4.01964149e-07  5.90633512e-10 -1.23572099e-07]\n",
-      " [ 8.31781129e-05 -1.23572099e-07  2.59095218e-05]]\n",
+      "[[ 3.33874210e-04 -4.05556245e-07  8.40692321e-05]\n",
+      " [-4.05556245e-07  5.92532998e-10 -1.24090895e-07]\n",
+      " [ 8.40692321e-05 -1.24090895e-07  2.60413946e-05]]\n",
       "Residual\n",
       "nan\n",
       "Maximum absolute value of weighted deviations\n",
@@ -187,7 +187,7 @@
      "output_type": "stream",
      "text": [
       "Measurement data:\n",
-      "[[5.34545437e+00 1.41710411e-02 4.95049755e+03 1.09781154e+01]]\n"
+      "[[5.34556419e+00 1.40650375e-02 4.95063949e+03 1.08243660e+01]]\n"
      ]
     }
    ],
@@ -220,13 +220,13 @@
      "output_type": "stream",
      "text": [
       "Coefficients b\n",
-      "[-4.82050474e+01  4.82104256e+01  2.12640998e-05]\n",
+      "[-4.80920055e+01  4.80977253e+01  2.13091751e-05]\n",
       "Uncertainties u(b)\n",
-      "[3.23890294e+00 3.22780896e+00 1.27497411e-06]\n",
+      "[3.22753103e+00 3.21632789e+00 1.27784624e-06]\n",
       "Covariance cov(b)\n",
-      "[[ 1.04904922e+01 -1.04545267e+01  4.11278711e-06]\n",
-      " [-1.04545267e+01  1.04187507e+01 -4.09881548e-06]\n",
-      " [ 4.11278711e-06 -4.09881548e-06  1.62555899e-12]]\n",
+      "[[ 1.04169566e+01 -1.03807655e+01  4.10823614e-06]\n",
+      " [-1.03807655e+01  1.03447651e+01 -4.09407101e-06]\n",
+      " [ 4.10823614e-06 -4.09407101e-06  1.63289100e-12]]\n",
       "Residual\n",
       "nan\n",
       "Maximum absolute value of weighted deviations\n",
@@ -256,7 +256,7 @@
      "output_type": "stream",
      "text": [
       "Measurement data:\n",
-      "[[5.33566557e+00 1.42490351e-02 4.95049755e+03 1.09781154e+01]]\n"
+      "[[5.33560424e+00 1.41443765e-02 4.95063949e+03 1.08243660e+01]]\n"
      ]
     }
    ],
